fix: search-bar align

--- a/html/home.css
+++ b/html/home.css
@@ -32,7 +32,7 @@ a {
 
 /* MAIN */
 .main {
-  height: 250px;
+  height: 285px;
   width: 600px;
   padding: 10px;
   position: relative;
@@ -50,16 +50,17 @@ a {
 /* Search form */
 #search {
   width: 100%;
-  height: 50%;
+  height: 60%;
   display: flex; /* Vertically align search-bar and buttons */
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
+  border: 3px solid red;
 }
 
 .search-bar {
   width: 100%;
-  height: 40px;
+  height: 45px;
   border: 0.5px solid var(--search-bar-color);
   border-radius: 24px;
   display: flex; /* Horizontally align icons and textarea */
